[project]
name = "phoms"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "requests>=2.32",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "pandas>=2.2",
  "feedparser>=6.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.7", "pytest>=8.3", "responses>=0.25", "ipykernel>=6.29"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phoms"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]